--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+     - assets/
+     - assets/icons/ 
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Black.ttf
+    - family: Raleway
+      fonts: 
+        - asset: assets/fonts/Raleway-Black.ttf
