--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.0
   curved_navigation_bar: ^1.0.3
+  cloud_firestore: ^4.17.3
   
 
 dev_dependencies:
