--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sign_in_with_apple: ^6.1.0
   curved_navigation_bar: ^1.0.3
   cloud_firestore: ^4.17.3
+  permission_handler: ^11.3.1
   
 
 dev_dependencies:
