--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   cloud_firestore: ^4.17.3
   permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
   
 
 dev_dependencies:
