--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   cloud_firestore: ^4.17.3
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.0
+  cached_network_image: ^3.3.1
+  http: ^1.2.1
+  image: ^4.1.7
+  provider: ^6.1.2
   
 
 dev_dependencies:
